# sauter-devs.github.io

./: index.html
css/: sauterdevs.css
js/: sauterdevs.js
talks/2015-05-19-cpp-everywhere-and-in-the-browser/: IDEA.md  STEPS.md  presentation.odp
talks/2015-05-19-cpp-everywhere-and-in-the-browser/cmake/: CMakeLists.txt  index.html  index_as_library.html
talks/2015-05-19-cpp-everywhere-and-in-the-browser/cmake/buildBrowser/: CMakeCache.txt  Makefile  cmake_install.cmake  libalarm-renderer.js
talks/2015-05-19-cpp-everywhere-and-in-the-browser/cmake/buildPC/: CMakeCache.txt  Makefile  alarm-renderer  cmake_install.cmake
talks/2015-05-19-cpp-everywhere-and-in-the-browser/cmake/build_host/: CMakeCache.txt  Makefile  alarm-renderer  cmake_install.cmake
talks/2015-05-19-cpp-everywhere-and-in-the-browser/cmake/src/: main.cpp
talks/2015-05-19-cpp-everywhere-and-in-the-browser/cmake/src/alarms/: Alarm.hpp  AlarmWidget.hpp  factory.hpp
talks/2015-05-19-cpp-everywhere-and-in-the-browser/cmake/src/ui/: Widget.hpp  WidgetsRenderer.hpp
talks/2015-05-19-cpp-everywhere-and-in-the-browser/hello_world/: a.out  hello_world.cpp  hello_world.html  hello_world.js  helloworld.html  helloworld.js  main.cpp
talks/2015-05-28-small-programming-turnament/: pi_test  results_performance_measurements.txt
talks/2015-05-28-small-programming-turnament/bauernmi/: main.cpp
talks/2015-05-28-small-programming-turnament/buhldam/: main.cpp
talks/2015-05-28-small-programming-turnament/rothren/: a.out  main.c  (+1 more)
talks/2015-06-23-api-is-art/: ERROR_HANDLING_summary.md  api-is-art
(+14 files in other folders)
